# LearnJni

./: README.md
app/: build.gradle
app/src/androidTest/java/com/android/learn_jni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  log.cpp  log.h  native-day2.cpp  native-lib.cpp  native-test.c  nativt-day3.cpp
app/src/main/java/com/android/learn_jni/: BaseActivity.java  Constants.java  Day1Activity.java  Day2Activity.java  Day3Activity.java  MainActivity.java
app/src/main/res/layout/: activity_day1.xml  activity_day2.xml  activity_day3.xml  activity_main.xml
app/src/test/java/com/android/learn_jni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
